# deep-loop

./: .gitignore  CLAUDE.md  README.md  knowledge_index.tsv  meta_analyze.py  notify.py  orchestrate.py  process_log.md  program.md  pyproject.toml  report.md  results.tsv  setup.sh
.claude/commands/: loop.md  status.md
openplanter/: __main__.py  builder.py  config.py  engine.py  model.py  prompts.py  settings.py  tool_defs.py  tools.py  tui.py
tests/: mock_train.py  run_tests.sh  seed_results.py  test_unit.py
