[project]
name = "deep-loop"
version = "0.1.0"
description = "Two-tier autonomous ML research: autoresearch experiments + OpenPlanter meta-analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # autoresearch deps
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    # openplanter + orchestration deps
    "anthropic>=0.25.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "pyfiglet>=1.0",
]

[project.scripts]
deep-loop = "orchestrate:main"

[tool.setuptools.packages.find]
include = ["openplanter*"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
